updated functions again

--- a/Lonelysg/app/src/main/res/layout/activity_create_invitation_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_create_invitation_ui.xml
@@ -22,8 +22,7 @@
             android:id="@+id/newInvitation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
+            android:gravity="center"
             android:text="NEW INVITATION"
             android:textSize="36sp"
             android:textColor="@color/white"
@@ -65,13 +64,23 @@
             android:gravity="left"
             android:hint="Enter the event description" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
+            android:text="Enter location address"
+            android:textSize="16dp"
+            android:textColor="@color/black"/>
+
         <fragment
             android:id="@+id/autocomplete_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="15dp"
             android:hint="Select Location"
             android:textAlignment="center"
