--- a/Lonelysg/app/src/main/res/layout/activity_individual_invitation_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_individual_invitation_ui.xml
@@ -134,7 +134,7 @@
                         android:id="@+id/activityDesc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Just a normal lunch where we can talk about politics and how important social distancing is"
+                        android:text=""
                         android:textSize="18sp"
                         android:textColor="#000000"/>
 
@@ -163,9 +163,10 @@
                         android:textSize="20sp"/>
 
                     <TextView
+                        android:id="@+id/hostInfo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="User 01, Male, Architect"
+                        android:text=""
                         android:textSize="18sp"
                         android:textColor="#000000"/>
 
@@ -194,9 +195,10 @@
                         android:textSize="20sp"/>
 
                     <TextView
+                        android:id="@+id/hostInterests"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Eating, Sleeping"
+                        android:text=""
                         android:textSize="18sp"
                         android:textColor="#000000"/>
 
@@ -222,7 +224,7 @@
                     android:layout_width="140dp"
                     android:layout_height="35dp"
                     android:layout_marginRight="20dp"
-                    android:id="@+id/rejectInvitation"
+                    android:id="@+id/backButton"
                     android:text="BACK "
                     android:textColor="@color/white"
                     android:textAlignment="textEnd"
@@ -232,8 +234,7 @@
                     android:background="@drawable/borders3"/>
 
                 <Button
-                    android:layout_width="140dp"
-
+                    android:layout_width="wrap_content"
                     android:layout_height="35dp"
                     android:id="@+id/acceptInvitation"
                     android:text="SEND REQUEST "
@@ -242,6 +243,7 @@
                     android:textSize="18sp"
                     android:drawableRight="@drawable/chat_white"
                     android:paddingRight="15dp"
+                    android:paddingLeft="15dp"
                     android:background="@drawable/borders3"
 
                     />
