--- a/Lonelysg/app/src/main/res/layout/activity_user_invitations_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_user_invitations_ui.xml
@@ -23,8 +23,7 @@
             android:id="@+id/userInvitations"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
+            android:gravity="center"
             android:text="MY INVITATIONS"
             android:textStyle="bold"
             android:textColor="@color/white"
