--- a/Lonelysg/app/src/main/res/layout/activity_pending_requests_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_pending_requests_ui.xml
@@ -6,26 +6,45 @@
     android:layout_height="match_parent"
     tools:context=".Activities.PendingRequestsUI">
 
-    <ListView
-        android:id="@+id/pendingRequestsListView"
-        android:layout_width="315dp"
-        android:layout_height="500dp"
-        android:layout_marginBottom="68dp"
+    <LinearLayout
+        android:id="@+id/l2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/pendingRequestsTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pending Requests"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/pendingRequestsListView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.219"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.875" />
+        android:background="@drawable/splash_screen">
+
+        <TextView
+            android:id="@+id/pendingRequestsTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PENDING REQUESTS"
+            android:textSize="36sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/receivedRequestsListView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.363"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.873"/>
+
+        <View
+            android:layout_width="350dp"
+            android:layout_height="1dp"
+            android:layout_margin="5dp"
+            android:background="@color/white"/>
+
+        <ListView
+            android:id="@+id/pendingRequestsListView"
+            android:layout_width="340dp"
+            android:layout_height="475dp"
+            android:layout_marginTop="20dp"/>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
