--- a/Lonelysg/app/src/main/res/layout/chat_view_sender.xml
+++ b/Lonelysg/app/src/main/res/layout/chat_view_sender.xml
@@ -6,17 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="User"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="5dp"
-        />
+<!--    <TextView-->
+<!--        android:id="@+id/user"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Me"-->
+<!--        android:textSize="24sp"-->
+<!--        android:textStyle="bold"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_alignParentRight="true"-->
+<!--        android:layout_marginBottom="5dp"-->
+<!--        />-->
 
     <androidx.cardview.widget.CardView
         android:id="@+id/messagesBubble"
