--- a/Lonelysg/app/src/main/res/layout/signup_screen.xml
+++ b/Lonelysg/app/src/main/res/layout/signup_screen.xml
@@ -52,7 +52,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:ems="11"
-                android:hint="New Password"
+                android:hint="Password"
                 android:inputType="textPassword" />
 
             <EditText
