profile pic stuff

--- a/Lonelysg/app/src/main/res/layout/fragment_account.xml
+++ b/Lonelysg/app/src/main/res/layout/fragment_account.xml
@@ -25,6 +25,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="15dp"
                 android:src="@drawable/user_sample"
+                android:id="@+id/accountProfilePic"
                 android:adjustViewBounds="true"
                 android:padding="5dp"
                 android:scaleType="centerInside"/>
