search, sort, and more!

--- a/Lonelysg/app/src/main/res/layout/activity_individual_invitation_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_individual_invitation_ui.xml
@@ -80,7 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageUser"
             android:layout_gravity="center_horizontal"
-            android:text="Lunch at Orchard"
+            android:text="Activity Title"
             android:textSize="27sp"
             android:textStyle="bold"/>
 
@@ -157,7 +157,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="User Information"
+                        android:text="Host Information"
                         android:fontFamily="sans-serif-medium"
                         android:textColor="@color/darkblue"
                         android:textSize="20sp"/>
@@ -189,7 +189,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="User Interests"
+                        android:text="Host Interests"
                         android:fontFamily="sans-serif-medium"
                         android:textColor="@color/darkblue"
                         android:textSize="20sp"/>
