--- a/Lonelysg/app/src/main/res/layout/invitation_list_layout.xml
+++ b/Lonelysg/app/src/main/res/layout/invitation_list_layout.xml
@@ -44,6 +44,16 @@
                 android:layout_weight="1"
                 android:text="Invitation Date and Time"
                 android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/invitationLocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_weight="1"
+                android:text="Invitation Location"
+                android:textSize="16sp" />
+
         </LinearLayout>
 
     </LinearLayout>
