--- a/Lonelysg/app/src/main/res/layout/activity_invitations_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_invitations_ui.xml
@@ -37,36 +37,64 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
         <LinearLayout
+            android:id="@+id/ll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#fcfcfc"
             android:gravity="center"
             android:orientation="vertical"
-            android:padding="10dp"
-            android:id="@+id/ll">
+            android:padding="10dp">
 
-            <EditText
-                android:id="@+id/search_bar"
-                android:layout_width="wrap_content"
+            <SearchView
+                android:id="@+id/searchView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </SearchView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="1dp"
-                android:ems="10"
-                android:hint="What do you want?"
-                android:inputType="textPersonName"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="15dp"
+                    android:text="Sort by"
+                    android:textSize="18dp" />
+
+                <Spinner
+                    android:id="@+id/sortDropBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginRight="15dp"
+                    android:gravity="center" />
+
+            </LinearLayout>
 
             <ListView
                 android:id="@+id/invitationsListView"
                 android:layout_width="300dp"
-                android:layout_height="400dp"
-                android:layout_marginTop="28dp"
+                android:layout_height="550dp"
+                android:layout_marginTop="15dp"
+                android:layout_weight="1"
+                android:nestedScrollingEnabled="true"
+                android:scrollbarSize="3dp"
+                android:scrollbarStyle="outsideOverlay"
+                android:scrollbars="vertical"
+                android:scrollingCache="true"
+                android:smoothScrollbar="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/searchBar"
+                app:layout_constraintTop_toBottomOf="@+id/sortDropBox"
                 app:layout_constraintVertical_bias="0.292" />
 
         </LinearLayout>
