--- a/Lonelysg/app/src/main/res/layout/activity_individual_chat_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_individual_chat_ui.xml
@@ -33,15 +33,15 @@
 
         <ImageButton
             android:id="@+id/refreshButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="35dp"
+            android:layout_height="23dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="15dp"
-            android:layout_marginEnd="15dp"
-            android:src="@drawable/refresh"
+            android:layout_marginEnd="29dp"
+            android:background="@color/backgroundcolor"
             android:scaleType="fitCenter"
-            android:background="@color/backgroundcolor"/>
+            android:src="@drawable/refresh" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/chatView"
