circle profile pic

--- a/Lonelysg/app/src/main/res/layout/fragment_account.xml
+++ b/Lonelysg/app/src/main/res/layout/fragment_account.xml
@@ -19,16 +19,13 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="170dp"
                 android:layout_height="170dp"
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="15dp"
                 android:src="@drawable/user_sample"
-                android:id="@+id/accountProfilePic"
-                android:adjustViewBounds="true"
-                android:padding="5dp"
-                android:scaleType="centerInside"/>
+                android:id="@+id/accountProfilePic" />
 
         </RelativeLayout>
 
