--- a/Lonelysg/app/src/main/res/layout/activity_individual_chat_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_individual_chat_ui.xml
@@ -16,6 +16,26 @@
         tools:layout_editor_absoluteX="-16dp"
         tools:layout_editor_absoluteY="74dp">
 
+        <Button
+            android:id="@+id/backButton"
+            android:layout_width="140dp"
+            android:layout_height="35dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="20dp"
+            android:layout_toStartOf="@+id/receiverName"
+            android:background="@drawable/borders3"
+            android:drawableRight="@drawable/cancel_icon"
+            android:paddingRight="29dp"
+            android:text="BACK "
+            android:textAlignment="textEnd"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
         <TextView
             android:id="@+id/receiverName"
             android:layout_width="wrap_content"
@@ -25,8 +45,9 @@
             android:layout_marginStart="15dp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="15dp"
+            android:layout_toStartOf="@+id/refreshButton"
             android:text="Chatting with ..."
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -38,21 +59,22 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="15dp"
-            android:layout_marginEnd="29dp"
+            android:layout_marginEnd="15dp"
             android:background="@color/backgroundcolor"
             android:scaleType="fitCenter"
             android:src="@drawable/refresh" />
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/chatView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/typeMessage"
+            android:layout_marginLeft="15dp"
             android:layout_marginTop="50dp"
             android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"
+            android:layout_marginBottom="20dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
 
         <EditText
             android:id="@+id/typeMessage"
@@ -60,10 +82,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="75dp"
             android:ems="10"
             android:focusable="true"
             android:hint="Type message here"
@@ -77,7 +99,6 @@
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/typeMessage"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
             android:layout_below="@+id/chatView"
             android:layout_marginStart="0dp"
             android:layout_marginTop="5dp"
@@ -85,8 +106,6 @@
             android:layout_marginBottom="15dp"
             android:layout_toEndOf="@+id/typeMessage"
             android:text="Send" />
-
-
 
     </RelativeLayout>
 
