--- a/Lonelysg/app/src/main/res/layout/activity_individual_invitation_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_individual_invitation_ui.xml
@@ -34,16 +34,16 @@
                 tools:context="com.IrisBICS.lonelysg.Activities.IndividualInvitationUI" />
 
 
-            <ImageButton
-                android:id="@+id/reportInvitation"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginRight="15dp"
-                android:layout_marginLeft="370dp"
-                android:layout_marginTop="2dp"
-                android:adjustViewBounds="true"
-                android:scaleType="centerInside"
-                android:background="@drawable/report_icon"/>
+<!--            <ImageButton-->
+<!--                android:id="@+id/reportInvitation"-->
+<!--                android:layout_width="40dp"-->
+<!--                android:layout_height="40dp"-->
+<!--                android:layout_marginRight="15dp"-->
+<!--                android:layout_marginLeft="370dp"-->
+<!--                android:layout_marginTop="2dp"-->
+<!--                android:adjustViewBounds="true"-->
+<!--                android:scaleType="centerInside"-->
+<!--                android:background="@drawable/report_icon"/>-->
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbarid"
@@ -125,13 +125,45 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Activity Description "
+                        android:text="Description "
                         android:fontFamily="sans-serif-medium"
                         android:textColor="@color/darkblue"
                         android:textSize="24sp"/>
 
                     <TextView
                         android:id="@+id/activityDesc"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:textSize="18sp"
+                        android:textColor="#000000"/>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="5dp"
+                        android:background="#D3D3D3"/>
+                </LinearLayout>
+
+                // For Location
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Location"
+                        android:fontFamily="sans-serif-medium"
+                        android:textColor="@color/darkblue"
+                        android:textSize="20sp"/>
+
+                    <TextView
+                        android:id="@+id/activityLocation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=""
