--- a/Lonelysg/app/src/main/res/layout/activity_received_requests_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_received_requests_ui.xml
@@ -45,7 +45,25 @@
             android:id="@+id/receivedRequestsListView"
             android:layout_width="340dp"
             android:layout_height="475dp"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp"
+            android:scrollbarSize="3dp"
+            android:scrollbarStyle="outsideOverlay"
+            android:scrollbars="vertical"
+            android:scrollingCache="true"
+            android:smoothScrollbar="true"/>
+
+        <Button
+            android:layout_width="140dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="20dp"
+            android:id="@+id/backButton"
+            android:text="BACK "
+            android:textColor="@color/white"
+            android:textAlignment="textEnd"
+            android:textSize="18sp"
+            android:drawableRight="@drawable/cancel_icon"
+            android:paddingRight="29dp"
+            android:background="@drawable/borders3"/>
 
     </LinearLayout>
 
