--- a/Lonelysg/app/src/main/res/layout/fragment_activities.xml
+++ b/Lonelysg/app/src/main/res/layout/fragment_activities.xml
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:gravity="center"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:padding="10dp"
             app:layout_anchor="@+id/constraintLayout"
             app:layout_anchorGravity="center"
