--- a/Lonelysg/app/src/main/res/layout/fragment_chat.xml
+++ b/Lonelysg/app/src/main/res/layout/fragment_chat.xml
@@ -47,8 +47,14 @@
         <ListView
             android:id="@+id/chatList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        
+            android:layout_height="wrap_content"
+            android:nestedScrollingEnabled="true"
+            android:scrollbarSize="3dp"
+            android:scrollbarStyle="outsideOverlay"
+            android:scrollbars="vertical"
+            android:scrollingCache="true"
+            android:smoothScrollbar="true"/>
+
     </androidx.core.widget.NestedScrollView>
 
 
