--- a/Lonelysg/app/src/main/res/layout/activity_individual_invitation_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_individual_invitation_ui.xml
@@ -70,6 +70,7 @@
             android:layout_marginTop="40dp"
             android:layout_marginBottom="8dp"
             android:layout_gravity="center"
+            android:id="@+id/invImage"
             android:src="@drawable/user_sample"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"/>
