--- a/Lonelysg/app/src/main/res/layout/activity_individual_user_invitation_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_individual_user_invitation_ui.xml
@@ -62,6 +62,7 @@
             android:layout_marginBottom="8dp"
             android:layout_gravity="center"
             android:src="@drawable/user_sample"
+            android:id="@+id/indUserInvImage"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"/>
 
