--- a/Lonelysg/app/src/main/res/layout/invitation_list_layout.xml
+++ b/Lonelysg/app/src/main/res/layout/invitation_list_layout.xml
@@ -14,11 +14,11 @@
         android:padding="15dp">
 
         <ImageView
-            android:id="@+id/userImage"
+            android:id="@+id/invListImage"
             android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@mipmap/ic_launcher"
-            android:layout_gravity="center"/>
+            android:layout_height="41dp"
+            android:layout_gravity="center"
+            android:src="@mipmap/ic_launcher" />
 
         <LinearLayout
             android:layout_width="match_parent"
