--- a/Lonelysg/app/src/main/res/layout/activity_individual_chat_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_individual_chat_ui.xml
@@ -27,7 +27,6 @@
             android:layout_marginTop="15dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="20dp"
-            android:layout_toStartOf="@+id/receiverName"
             android:background="@drawable/borders3"
             android:drawableRight="@drawable/cancel_icon"
             android:paddingRight="29dp"
@@ -47,7 +46,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="15dp"
-            android:layout_toStartOf="@+id/refreshButton"
+            android:layout_toEndOf="@+id/backButton"
             android:text="Chatting with ..."
             android:textSize="24sp"
             android:textStyle="bold" />
