--- a/Lonelysg/app/src/main/res/layout/activity_individual_invitation_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_individual_invitation_ui.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.IndividualInvitationUI"
+    tools:context=".Activities.ActivityIndividualInvitation"
     android:background="@color/backgroundcolor">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -31,7 +31,7 @@
                 android:name="com.google.android.gms.maps.SupportMapFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context="com.IrisBICS.lonelysg.Activities.IndividualInvitationUI" />
+                tools:context="com.IrisBICS.lonelysg.Activities.ActivityIndividualInvitation" />
 
 
 <!--            <ImageButton-->
