--- a/Lonelysg/app/src/main/res/layout/fragment_discovery.xml
+++ b/Lonelysg/app/src/main/res/layout/fragment_discovery.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.DiscoveryPageUI"
+    tools:context=".Fragments.FragmentDiscoveryPage"
     android:background="@color/backgroundcolor">
 
     <com.google.android.material.appbar.AppBarLayout
