--- a/Lonelysg/app/src/main/res/layout/signup_screen.xml
+++ b/Lonelysg/app/src/main/res/layout/signup_screen.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
     android:background="@drawable/splash_screen"
-    tools:context=".Activities.SignUpPage">
+    tools:context=".Activities.ActivitySignUp">
 
     <RelativeLayout
         android:id="@+id/loginPlaceholder"
