--- a/Lonelysg/app/src/main/res/layout/activity_invitations_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_invitations_ui.xml
@@ -51,13 +51,16 @@
             <SearchView
                 android:id="@+id/searchView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/borders5">
 
             </SearchView>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:orientation="horizontal">
 
                 <TextView
