--- a/Lonelysg/app/src/main/res/layout/fragment_discovery.xml
+++ b/Lonelysg/app/src/main/res/layout/fragment_discovery.xml
@@ -74,7 +74,7 @@
                         <ImageView
                             android:layout_width="90dp"
                             android:layout_height="90dp"
-                            android:background="@drawable/food_icon"/>
+                            android:background="@drawable/all_icon"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -117,9 +117,10 @@
                         android:orientation="vertical">
 
                         <ImageView
-                            android:layout_width="75dp"
-                            android:layout_height="75dp"
-                            android:background="@drawable/movie_icon"
+                            android:layout_width="70dp"
+                            android:layout_height="73dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@drawable/deck"
                             android:padding="10dp" />
 
                         <TextView
@@ -220,7 +221,7 @@
 
                         <ImageView
                             android:layout_width="75dp"
-                            android:layout_height="75dp"
+                            android:layout_height="78dp"
                             android:background="@drawable/movie_icon"
                             android:padding="10dp" />
 
