--- a/Lonelysg/app/src/main/res/layout/invitation_list_layout.xml
+++ b/Lonelysg/app/src/main/res/layout/invitation_list_layout.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal"
         android:padding="15dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/invListImage"
             android:layout_width="60dp"
             android:layout_height="41dp"
