--- a/Lonelysg/app/src/main/res/layout/activity_individual_chat_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_individual_chat_ui.xml
@@ -63,10 +63,11 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/chatView"
+                android:layout_gravity="bottom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="20dp"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior" />
@@ -80,11 +81,11 @@
 
             <EditText
                 android:id="@+id/typeMessage"
-                android:layout_width="295dp"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginEnd="20dp"
                 android:layout_marginBottom="15dp"
                 android:ems="10"
                 android:focusable="true"
@@ -95,9 +96,9 @@
 
             <Button
                 android:id="@+id/sendButton"
-                android:layout_width="wrap_content"
+                android:layout_width="65dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="15dp"
