--- a/Lonelysg/app/src/main/res/layout/fragment_account.xml
+++ b/Lonelysg/app/src/main/res/layout/fragment_account.xml
@@ -247,25 +247,11 @@
                         android:layout_marginLeft="70dp"
                         android:layout_marginRight="70dp"
                         android:layout_marginTop="40dp"
+                        android:layout_gravity="center"
                         android:background="@drawable/borders3"
                         android:paddingLeft="60dp"
                         android:paddingRight="60dp"
                         android:text="EDIT PROFILE"
-                        android:textColor="@color/white"
-                        android:textSize="21sp"
-                        android:textStyle="bold"/>
-
-                    <Button
-                        android:id="@+id/logoutButton"
-                        android:layout_width="255dp"
-                        android:layout_height="36dp"
-                        android:layout_marginLeft="70dp"
-                        android:layout_marginRight="70dp"
-                        android:layout_marginTop="15dp"
-                        android:background="@drawable/borders3"
-                        android:paddingLeft="60dp"
-                        android:paddingRight="60dp"
-                        android:text="LOG OUT"
                         android:textColor="@color/white"
                         android:textSize="21sp"
                         android:textStyle="bold"/>
