--- a/Lonelysg/app/src/main/res/layout/activity_chat_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_chat_ui.xml
@@ -93,6 +93,15 @@
                 android:scrollingCache="true"
                 android:smoothScrollbar="true" />
 
+            <TextView
+                android:id="@android:id/empty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No chats yet."
+                android:textSize="18dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="40dp"/>
+
         </LinearLayout>
 
 
