--- a/Lonelysg/app/src/main/res/layout/activity_invitations_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_invitations_ui.xml
@@ -101,10 +101,20 @@
                 app:layout_constraintTop_toBottomOf="@+id/sortDropBox"
                 app:layout_constraintVertical_bias="0.292" />
 
+            <TextView
+                android:id="@android:id/empty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No invitations yet."
+                android:textSize="18dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="420dp"
+                android:layout_gravity="center"/>
+
             <Button
                 android:layout_width="140dp"
                 android:layout_height="35dp"
-                android:layout_marginRight="20dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="15dp"
                 android:id="@+id/backButton"
                 android:text="BACK "
@@ -113,7 +123,8 @@
                 android:textSize="18sp"
                 android:drawableRight="@drawable/cancel_icon"
                 android:paddingRight="29dp"
-                android:background="@drawable/borders3"/>
+                android:background="@drawable/borders3"
+                tools:ignore="RtlCompat" />
 
         </LinearLayout>
 
