change password and delete user 2

--- a/Lonelysg/app/src/main/res/layout/activity_change_password.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_change_password.xml
@@ -8,97 +8,93 @@
     android:background="@drawable/splash_screen"
     tools:context=".Activities.ActivitySignUp">
 
-    <RelativeLayout
-        android:id="@+id/loginPlaceholder"
-        android:layout_width="248dp"
-        android:layout_height="467dp"
+    <LinearLayout
+        android:id="@+id/forgetPwStuff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp">
+        android:layout_marginTop="150dp"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            android:layout_centerHorizontal="true"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/logo" />
-
-        <LinearLayout
-            android:id="@+id/signUpStuff"
+        <EditText
+            android:id="@+id/oldPasswordInput"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/logo"
-            android:layout_marginTop="20dp"
-            android:orientation="vertical">
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:ems="11"
+            android:hint="Current password"
+            android:inputType="textPassword" />
 
-            <EditText
-                android:id="@+id/emailInputS"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:ems="11"
-                android:hint="Email"
-                android:inputType="textEmailAddress" />
+        <EditText
+            android:id="@+id/newPasswordInput"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:ems="11"
+            android:hint="New password"
+            android:inputType="textPassword" />
 
-            <EditText
-                android:id="@+id/passwordInputS"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/usernameInputS"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:ems="11"
-                android:hint="Password"
-                android:inputType="textPassword" />
+        <EditText
+            android:id="@+id/confirmPasswordInput"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:ems="11"
+            android:hint="Confirm new password"
+            android:inputType="textPassword" />
 
-            <EditText
-                android:id="@+id/userNameInput"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/usernameInputS"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:ems="11"
-                android:hint="Username"
-                android:inputType="text" />
+    </LinearLayout>
 
-        </LinearLayout>
+    <Button
+        android:id="@+id/changePasswordButton"
+        android:layout_width="180dp"
+        android:layout_height="30dp"
+        android:layout_below="@+id/forgetPwStuff"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/borders4"
+        android:text="CHANGE PASSWORD"
+        android:textAlignment="center"
+        android:textColor="@color/black" />
 
-        <Button
-            android:id="@+id/signUpButtonS"
-            android:layout_width="180dp"
-            android:layout_height="30dp"
-            android:layout_below="@+id/signUpStuff"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginRight="15dp"
-            android:background="@drawable/borders4"
-            android:text="SIGN UP"
-            android:textAlignment="center"
-            android:textColor="@color/black" />
+    <Button
+        android:id="@+id/forgotPasswordButton"
+        android:layout_width="180dp"
+        android:layout_height="30dp"
+        android:layout_below="@+id/changePasswordButton"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/borders4"
+        android:text="FORGOT PASSWORD"
+        android:textAlignment="center"
+        android:textColor="@color/black" />
 
-        <Button
-            android:id="@+id/backButton"
-            android:layout_width="180dp"
-            android:layout_height="30dp"
-            android:layout_below="@+id/signUpButtonS"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginRight="15dp"
-            android:background="@drawable/borders4"
-            android:text="GO BACK TO LOGIN"
-            android:textAlignment="center"
-            android:textColor="@color/black" />
-
-    </RelativeLayout>
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="180dp"
+        android:layout_height="30dp"
+        android:layout_below="@+id/forgotPasswordButton"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/borders4"
+        android:text="CANCEL"
+        android:textAlignment="center"
+        android:textColor="@color/black" />
 
 </RelativeLayout>
+
