--- a/Lonelysg/app/src/main/res/layout/activity_sign_up.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_sign_up.xml
@@ -14,7 +14,8 @@
         android:layout_height="467dp"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp">
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="120dp" >
 
         <ImageView
             android:id="@+id/logo"
